--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,5 +6,6 @@ parameters:
     ignoreErrors:
         - '#^Unsafe usage of new static\(\)\.$#'
         # PHP 7.1 only
+        - '#^Constant JSON_THROW_ON_ERROR not found\.$#'
         - '#^Caught class JsonException not found\.$#'
         - '#^Call to method getCode\(\) on an unknown class JsonException\.$#'
