--- a/.ci/test-matrix.yml
+++ b/.ci/test-matrix.yml
@@ -1,6 +1,6 @@
 ---
 STACK_VERSION:
-  - 7.11.0-SNAPSHOT
+  - 7.11.0
   
 PHP_VERSION:
   - 8.0-cli
@@ -10,7 +10,7 @@ PHP_VERSION:
   - 7.1-cli
 
 TEST_SUITE:
-  - oss
-  - xpack
+  - free
+  - platinum
 
 exclude: ~
