--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,14 +12,13 @@
     <testsuites>
         <testsuite name="Unit tests">
             <directory>tests</directory>
-            <exclude>tests/Elasticsearch/Tests/YamlRunnerTest.php</exclude>
         </testsuite>
     </testsuites>
     <groups>
         <exclude>
             <group>Integration</group>
-            <group>oss</group>
-            <group>xpack</group>
+            <group>free</group>
+            <group>platinum</group>
         </exclude>
     </groups>
     <filter>
