--- a/.gitignore
+++ b/.gitignore
@@ -23,15 +23,23 @@ generator/*
 # Elasticsearch related
 util/elasticsearch/
 util/cache/
+util/*.zip
+util/output/
 
-# Sami docs generator
-/sami.phar
+# Doctum docs generator
+/doctum.phar
 
 # PHPUnit
 /phpunit.xml
+.phpunit.result.cache
 
 # Code coverage
 build
+# Do not ignore Doctum docs built files
+!/docs/build
 
 # Junit test output
 tests/*-junit.xml
+
+# YAML tests
+tests/Elasticsearch/Tests/Yaml
