--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [7.1, 7.2, 7.3, 7.4]
+        php-version: [7.1, 7.2, 7.3, 7.4, 8.0]
         os: [ubuntu-latest]
         es-version: [8.0.0-SNAPSHOT]
 
@@ -52,7 +52,7 @@ jobs:
       run: |
         vendor/bin/phpunit -c phpunit.xml.dist
       env:
-        TEST_SUITE: oss
+        TEST_SUITE: free
 
     - name: Configure sysctl limits
       run: |
@@ -70,5 +70,5 @@ jobs:
       run: |
         vendor/bin/phpunit -c phpunit-integration-tests.xml
       env:
-        TEST_SUITE: oss
+        TEST_SUITE: free
         
