--- a/composer.json
+++ b/composer.json
@@ -13,20 +13,20 @@
     }
   ],
   "require": {
-    "php": "^7.0",
+    "php": "^7.1 || ^8.0",
     "ext-json": ">=1.3.7",
-    "guzzlehttp/ringphp": "~1.0",
+    "ezimuel/ringphp": "^1.1.2",
     "psr/log": "~1.0"
   },
   "require-dev": {
-    "cpliakas/git-wrapper": "^1.7 || ^2.1",
-    "doctrine/inflector": "^1.1",
+    "cpliakas/git-wrapper": "~2.0 || ~3.0",
+    "doctrine/inflector": "^1.3",
     "mockery/mockery": "^1.2",
-    "phpstan/phpstan-shim": "^0.9 || ^0.11",
-    "phpunit/phpunit": "^5.7 || ^6.5",
+    "phpstan/phpstan": "^0.12",
+    "phpunit/phpunit": "^7.5 || ^8.5 || ^9.3",
     "squizlabs/php_codesniffer": "^3.4",
-    "symfony/finder": "^2.8",
-    "symfony/yaml": "^2.8"
+    "symfony/finder": "~4.0",
+    "symfony/yaml": "~4.0"
   },
   "suggest": {
     "ext-curl": "*",
