Removed Travis CI in favor of Github Action

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ util/backup_*
 # PHPUnit
 /phpunit.xml
 .phpunit.result.cache
+
+# Junit test output
+tests/*-junit.xml
+
+# YAML tests
+tests/Elasticsearch/Tests/Yaml
