--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         php-version: [7.3, 7.4, 8.0]
         os: [ubuntu-latest]
-        es-version: [7.x-SNAPSHOT]
+        es-version: [6.8-SNAPSHOT]
 
     steps:
     - name: Checkout
