--- a/.gitattributes
+++ b/.gitattributes
@@ -1,15 +1,15 @@
 # Files to exclude when creating archive
-/tests export-ignore
+/.ci export-ignore
 /.github export-ignore
-/.gitmodules export-ignore
-/.gitignore export-ignore
-/.php_cs export-ignore
-/.travis.yml export-ignore
-/.phpstan-src.neon export-ignore
-/.phpstan-src-71.neon export-ignore
-/.phpstan-tests.neon export-ignore
-/phpunit-integration.xml export-ignore
-/phpunit.xml export-ignore
-/ruleset.xml export-ignore
-/travis export-ignore
+/tests export-ignore
 /util export-ignore
+/.gitattributes export-ignore
+/.gitignore export-ignore
+/.gitmodules export-ignore
+/.php_cs export-ignore
+/phpstan.neon export-ignore
+/phpunit-integration-tests.xml export-ignore
+/phpunit-yaml-free-tests.xml export-ignore
+/phpunit-yaml-platinum-tests.xml export-ignore
+/phpunit.xml.dist export-ignore
+/ruleset.xml export-ignore
