Use of ELASTICSEARCH_URL for integration-test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,4 +76,5 @@ jobs:
       run: |
         vendor/bin/phpunit -c phpunit-integration-tests.xml
       env:
-        TEST_SUITE: free
+        ELASTICSEARCH_URL: http://localhost:9200
+        
