--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,5 +70,5 @@ jobs:
       run: |
         vendor/bin/phpunit -c phpunit-integration-tests.xml
       env:
-        TEST_SUITE: free
+        ELASTICSEARCH_URL: http://localhost:9200
         
