--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,11 @@
   "require-dev": {
     "ext-yaml": "*",
     "ext-zip": "*",
-    "doctrine/inflector": "^1.3",
     "mockery/mockery": "^1.2",
     "phpstan/phpstan": "^0.12",
     "phpunit/phpunit": "^9.3",
     "squizlabs/php_codesniffer": "^3.4",
-    "symfony/finder": "~4.0",
-    "symfony/yaml": "~4.0"
+    "symfony/finder": "~4.0"
   },
   "suggest": {
     "ext-curl": "*",
