--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,9 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [7.3, 7.4, 8.0]
+        php-version: [7.2, 7.4, 8.0]
         os: [ubuntu-latest]
-        es-version: [8.0.0-SNAPSHOT]
+        es-version: [6.0.0-SNAPSHOT, 8.0.0-SNAPSHOT]
 
     steps:
     - name: Checkout
