--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "psr/log": "~1.0"
   },
   "require-dev": {
-    "symplify/git-wrapper": "~9.0",
+    "symplify/git-wrapper": ">=9.0 <9.3.27",
     "doctrine/inflector": "^1.3",
     "mockery/mockery": "^1.2",
     "phpstan/phpstan": "^0.12",
