--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "php": "^7.3 || ^8.0",
     "ext-json": ">=1.3.7",
     "ezimuel/ringphp": "^1.1.2",
-    "psr/log": "~1.0"
+    "psr/log": "^1|^2"
   },
   "require-dev": {
     "symplify/git-wrapper": ">=9.0 <9.3.27",
