Overwrite namespace to add `Iprice`

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "elasticsearch/elasticsearch",
+  "name": "ipricegroup/elasticsearch",
   "description": "PHP Client for Elasticsearch",
   "keywords": ["search","client", "elasticsearch"],
   "type": "library",
@@ -33,14 +33,14 @@
   },
   "autoload": {
     "psr-4": {
-      "Elasticsearch\\": "src/Elasticsearch/"
+      "Iprice\\Elasticsearch\\": "src/Elasticsearch/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Elasticsearch\\Tests\\": "tests/Elasticsearch/Tests/",
-      "Elasticsearch\\IntegrationTests\\": "tests/Elasticsearch/IntegrationTests/",
-      "Elasticsearch\\Util\\": "util/"
+      "Iprice\\Elasticsearch\\Tests\\": "tests/Elasticsearch/Tests/",
+      "Iprice\\Elasticsearch\\IntegrationTests\\": "tests/Elasticsearch/IntegrationTests/",
+      "Iprice\\Elasticsearch\\Util\\": "util/"
     }
   },
   "config": {
