--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": "^5.6|^7.0",
     "psr/log": "~1.0",
-    "guzzlehttp/ringphp" : "~1.0"
+    "ezimuel/ringphp": "^1.1.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^4.7|^5.4",
