Fixed query string in API endpoints + added a first integration test

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,9 @@
     "test" : [
       "vendor/bin/phpunit"
     ],
+    "integration-test" : [
+      "vendor/bin/phpunit -c phpunit-integration-tests.xml"
+    ],
     "phpstan": [
       "phpstan analyse src --level 2 --no-progress"
     ]
