--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "require": {
     "php": "^7.4 || ^8.0",
-    "elastic/transport": ">=8.0.0-rc3",
+    "elastic/transport": ">=v8.0.0-rc4",
     "psr/http-client": "^1.0",
     "psr/http-message": "^1.0",
     "psr/log": "^1|^2|^3",
