--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
   ],
   "type": "library",
   "license": "MIT",
+  "minimum-stability": "RC",
   "require": {
     "php": "^7.4 || ^8.0",
-    "elastic/transport": "=8.0.0-rc4",
+    "elastic/transport": ">=8.0.0-rc4",
     "psr/http-client": "^1.0",
     "psr/http-message": "^1.0",
     "psr/log": "^1|^2|^3",
