Removed error redirect on composer install

--- a/.ci/Dockerfile
+++ b/.ci/Dockerfile
@@ -32,7 +32,7 @@ RUN composer --version
 COPY composer.json .
 
 # Install dependencies with composer
-RUN composer install --no-progress &> /dev/null
+RUN composer install --no-progress > /dev/null
 
 COPY . .
 
