--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         php-version: [7.4, 8.0, 8.1]
         os: [ubuntu-latest]
-        es-version: [8.x-SNAPSHOT]
+        es-version: [8.2.0-SNAPSHOT]
 
     steps:
     - name: Checkout
