--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "elastic/transport": "^8.0",
     "psr/http-client": "^1.0",
     "psr/http-message": "^1.0",
-    "psr/log": "^1|^2|^3",
+    "psr/log": "^1 || ^2 || ^3",
     "guzzlehttp/guzzle": "^7.0"
   },
   "require-dev": {
