--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "require": {
     "php": "^7.4 || ^8.0",
-    "elastic/transport": "^8.0",
+    "elastic/transport": "geneva-wm-backend",
     "psr/http-client": "^1.0",
     "psr/http-message": "^1.0",
     "psr/log": "^1|^2|^3",
@@ -27,6 +27,12 @@
     "nyholm/psr7": "^1.5",
     "php-http/mock-client": "^1.5"
   },
+  "repositories": [
+    {
+      "type": "git",
+        "url": "https://github.com/mail2many/elastic-transport-php"
+    }
+  ],
   "autoload": {
     "psr-4": {
       "Elastic\\Elasticsearch\\": "src/"
