--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "require": {
     "php": "^7.4 || ^8.0",
-    "elastic/transport": "geneva-wm-backend",
+    "elastic/transport": "9.9.9",
     "psr/http-client": "^1.0",
     "psr/http-message": "^1.0",
     "psr/log": "^1|^2|^3",
