Changed TEST_SUITE to platinum for github integration test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,4 +64,4 @@ jobs:
       run: |
         composer run-script integration-test   
       env:
-        TEST_SUITE: free
+        TEST_SUITE: platinum
