--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,9 +56,11 @@ jobs:
         sudo sysctl -w vm.max_map_count=262144
 
     - name: Runs Elasticsearch ${{ matrix.es-version }}
-      uses: elastic/elastic-github-actions/elasticsearch@trial
-      with:
-        stack-version: ${{ matrix.es-version }}
+      run: |
+        .ci/run-elasticsearch.sh
+      env:
+        STACK_VERSION: ${{ matrix.es-version }}
+        TEST_SUITE: platinum
 
     - name: Integration tests
       run: |
