Added the DETACH=true to run ES in github action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -61,6 +61,7 @@ jobs:
       env:
         STACK_VERSION: ${{ matrix.es-version }}
         TEST_SUITE: platinum
+        DETACH: true
 
     - name: Integration tests
       run: |
