--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,7 +56,7 @@ jobs:
         sudo sysctl -w vm.max_map_count=262144
 
     - name: Runs Elasticsearch ${{ matrix.es-version }}
-      uses: elastic/elastic-github-actions/elasticsearch@master
+      uses: elastic/elastic-github-actions/elasticsearch@trial-license
       with:
         stack-version: ${{ matrix.es-version }}
 
@@ -64,4 +64,4 @@ jobs:
       run: |
         composer run-script integration-test   
       env:
-        TEST_SUITE: free
+        TEST_SUITE: platinum
