--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^5.6|^7.0",
+    "php": "^5.6|^7.0|^8.0",
     "psr/log": "~1.0",
     "ezimuel/ringphp": "^1.1.2"
   },
