--- a/.ci/jobs/elastic+elasticsearch-php+8.4.yml
+++ b/.ci/jobs/elastic+elasticsearch-php+8.4.yml
@@ -1,12 +1,12 @@
 ---
 - job:
-    name: elastic+elasticsearch-php+6.8.x
-    display-name: 'elastic / elasticsearch-php # 6.8.x'
-    description: Testing the elasticsearch-php 6.8.x branch.
+    name: elastic+elasticsearch-php+8.4
+    display-name: 'elastic / elasticsearch-php # 8.4'
+    description: Testing the elasticsearch-php 8.4 branch.
     parameters:
     - string:
         name: branch_specifier
-        default: refs/heads/6.8.x
+        default: refs/heads/8.4
         description: the Git branch specifier to build (&lt;branchName&gt;, &lt;tagName&gt;,
           &lt;commitId&gt;, etc.)
     triggers:
