--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "phpunit/phpunit": "^9.5",
     "symfony/finder": "~4.0",
     "nyholm/psr7": "^1.5",
-    "php-http/mock-client": "^1.5"
+    "php-http/mock-client": "^1.5",
+    "symfony/http-client": "^5.0|^6.0"
   },
   "autoload": {
     "psr-4": {
@@ -44,6 +45,9 @@
     ],
     "integration-test" : [
       "vendor/bin/phpunit --testdox -c phpunit-integration-tests.xml"
+    ],
+    "cloud-test" : [
+      "vendor/bin/phpunit --testdox -c phpunit-integration-cloud-tests.xml"
     ],
     "phpstan": [
       "phpstan analyse src --level 2 --no-progress"
