--- a/.ci/jobs/elastic+elasticsearch-php+main.yml
+++ b/.ci/jobs/elastic+elasticsearch-php+main.yml
@@ -1,12 +1,12 @@
 ---
 - job:
-    name: elastic+elasticsearch-php+master
-    display-name: 'elastic / elasticsearch-php # master'
-    description: Testing the elasticsearch-php master branch.
+    name: elastic+elasticsearch-php+main
+    display-name: 'elastic / elasticsearch-php # main'
+    description: Testing the elasticsearch-php main branch.
     parameters:
     - string:
         name: branch_specifier
-        default: refs/heads/master
+        default: refs/heads/main
         description: the Git branch specifier to build (&lt;branchName&gt;, &lt;tagName&gt;,
           &lt;commitId&gt;, etc.)
     triggers:
