--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [7.4, 8.0, 8.1]
+        php-version: [7.4, 8.0, 8.1, 8.2]
         os: [ubuntu-latest]
         es-version: [8.6-SNAPSHOT]
 
