Disabled code coverage for PHP

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ jobs:
       with:
         php-version: ${{ matrix.php-version }}
         extensions: yaml, zip, curl
+        coverage: none
       env:
         COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
    
