Added ELASTIC_CLIENT_URL_PLUS_AS_SPACE env variable for URL encode (#1303)
* Added ES_URL_PLUS_AS_SPACE env variable for URL encode

* Updated phpstan + fixed minor issues

* Changed env variable in ELASTIC_CLIENT_URL_PLUS_AS_SPACE

* Refactored the test job for github action

* Removed duplicate task

* Revert ELASTICSEARCH_URL parameter

* Added PHP 8.2 in CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,42 +9,37 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [7.3, 7.4, 8.0, 8.1]
+        php-version: [7.3, 7.4, 8.0, 8.1, 8.2]
         os: [ubuntu-latest]
         es-version: [7.17-SNAPSHOT]
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Use PHP ${{ matrix.php-version }}
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php-version }}
-        extensions: yaml
+        extensions: yaml, zip, curl
+        coverage: none
       env:
         COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+   
     - name: Get composer cache directory
       id: composercache
-      run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+      run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
 
     - name: Cache dependencies
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: ${{ steps.composercache.outputs.dir }}
-        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
-        restore-keys: ${{ runner.os }}-composer-
+        key: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ hashFiles('**/composer.json') }}
+        restore-keys: ${{ runner.os }}-php-${{ matrix.php-version }}-
 
     - name: Install dependencies
-      if: ${{ matrix.php-version != '8.0' }}
       run: |
         composer install --prefer-dist
-
-    - name: ignore ignore-platform-reqs if it is using php 8
-      if: ${{ matrix.php-version == '8.0' }}
-      run: |
-        composer install --prefer-dist --ignore-platform-reqs
 
     - name: PHP Coding Standards
       run: |
@@ -68,7 +63,7 @@ jobs:
         sudo sysctl -w vm.max_map_count=262144
 
     - name: Runs Elasticsearch ${{ matrix.es-version }}
-      uses: elastic/elastic-github-actions/elasticsearch@master
+      uses: elastic/elastic-github-actions/elasticsearch@trial-license
       with:
         stack-version: ${{ matrix.es-version }}
 
