--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "php": "^7.4 || ^8.0",
     "elastic/transport": "^8.7",
     "psr/http-client": "^1.0",
-    "psr/http-message": "^1.0",
+    "psr/http-message": "^1.0 || ^2.0",
     "psr/log": "^1|^2|^3",
     "guzzlehttp/guzzle": "^7.0"
   },
