--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "elasticsearch/elasticsearch",
+  "name": "axpwx/elasticsearch",
   "description": "PHP Client for Elasticsearch",
   "keywords": [
     "search",
