Add big `/docs` dir back to export-ignore in gitattributes
The directory is quite big, no need to package that along with the SDK when installing using composer

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,5 +10,5 @@
 /phpunit-yaml-free-tests.xml export-ignore
 /phpunit-yaml-platinum-tests.xml export-ignore
 /phpunit.xml.dist export-ignore
-#/docs export-ignore
+/docs export-ignore
 /.buildkite export-ignore
