Revert support of PHP 7.4

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -16,5 +16,6 @@ steps:
           - "8.2-cli"
           - "8.1-cli"
           - "8.0-cli"
+          - "7.4-cli"
     command: ./.buildkite/run-tests
     artifact_paths: "*.xml"
