--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,9 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [7.4, 8.0, 8.1, 8.2]
+        php-version: [7.4, 8.0, 8.1, 8.2, 8.3]
         os: [ubuntu-latest]
-        es-version: [8.9-SNAPSHOT]
+        es-version: [8.13-SNAPSHOT]
 
     steps:
     - name: Checkout
