Fixed some PHP deprecations for PHP 8

--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,10 @@
     }
   },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "php-http/discovery": true
+    }
   },
   "scripts": {
     "phpcs": [
