--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,13 +21,13 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php-version }}
-        extensions: yaml
+        extensions: yaml, zip, curl
       env:
         COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Get composer cache directory
       id: composercache
-      run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+      run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
 
     - name: Cache dependencies
       uses: actions/cache@v4
@@ -35,16 +35,10 @@ jobs:
         path: ${{ steps.composercache.outputs.dir }}
         key: ${{ runner.os }}-php-${{ matrix.php-version }}-${{ hashFiles('**/composer.json') }}
         restore-keys: ${{ runner.os }}-php-${{ matrix.php-version }}-
-          
+
     - name: Install dependencies
-      if: ${{ matrix.php-version != '8.0' }}
       run: |
         composer install --prefer-dist
-
-    - name: ignore ignore-platform-reqs if it is using php 8
-      if: ${{ matrix.php-version == '8.0' }}
-      run: |
-        composer install --prefer-dist --ignore-platform-reqs
 
     - name: PHP Coding Standards
       run: |
