--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "PHP Client for Elasticsearch",
   "keywords": [
     "search",
-    "client", 
+    "client",
     "elasticsearch",
     "elastic"
   ],
@@ -52,7 +52,7 @@
       "vendor/bin/phpunit --testdox -c phpunit-integration-cloud-tests.xml"
     ],
     "phpstan": [
-      "phpstan analyse src --level 2 --no-progress --memory-limit 256M"
+      "phpstan analyse --no-progress --memory-limit 256M"
     ]
   },
   "config": {
