--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,6 @@
 parameters:
-    level: 5
+    level: 2
     paths:
         - src
     ignoreErrors:
-        
+        - '#PHPDoc tag @param has invalid value#'
