Fix and improvements for PHPStan (rule level 5) (#1442)
* Fixes for PHPStan issues

* Added support for array<string> in path parts

* Reintroduced the body with null coalescing operator

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,6 +1,6 @@
 parameters:
-    level: 2
+    level: 5
     paths:
         - src
     ignoreErrors:
-        - '#PHPDoc tag @param has invalid value#'
+        - '#Offset ''body'' on array\{\}\|array\{#'
