--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,7 @@
     "nyholm/psr7": "^1.5",
     "php-http/mock-client": "^1.5",
     "symfony/http-client": "^5.0|^6.0|^7.0",
-    "psr/http-factory" : "^1.0",
-    "php-http/message-factory" : "^1.0"
+    "psr/http-factory" : "^1.0"
   },
   "autoload": {
     "psr-4": {
