--- a/composer.json
+++ b/composer.json
@@ -11,23 +11,23 @@
   "license": "MIT",
   "require": {
     "php": "^8.1",
-    "elastic/transport": "^8.10",
+    "elastic/transport": "^9.0",
     "psr/http-client": "^1.0",
-    "psr/http-message": "^1.1 || ^2.0",
-    "psr/log": "^1|^2|^3",
-    "guzzlehttp/guzzle": "^7.0"
+    "psr/http-message": "^2.0",
+    "psr/log": "^2.0|^3.0"
   },
   "require-dev": {
     "ext-yaml": "*",
     "ext-zip": "*",
-    "mockery/mockery": "^1.5",
+    "mockery/mockery": "^1.6",
     "phpstan/phpstan": "^2.1",
-    "phpunit/phpunit": "^9.5",
-    "symfony/finder": "~4.0",
-    "nyholm/psr7": "^1.5",
-    "php-http/mock-client": "^1.5",
-    "symfony/http-client": "^5.0|^6.0|^7.0",
-    "psr/http-factory" : "^1.0"
+    "phpunit/phpunit": "^10.0",
+    "symfony/finder": "^6.0",
+    "nyholm/psr7": "^1.8",
+    "php-http/mock-client": "^1.6",
+    "psr/http-factory" : "^1.0",
+    "guzzlehttp/guzzle": "^7.0",
+    "symfony/http-client": "^6.0|^7.0"
   },
   "autoload": {
     "psr-4": {
