--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "php-http/mock-client": "^1.6",
     "psr/http-factory" : "^1.0",
     "guzzlehttp/guzzle": "^7.0",
-    "symfony/http-client": "^6.0|^7.0"
+    "symfony/http-client": "^6.0|^7.0",
+    "nette/php-generator": "^4.0"
   },
   "autoload": {
     "psr-4": {
