Added PHP 8.4 test + ES 8.18-SNAPSHOT

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,13 +7,14 @@ steps:
     env:
       PHP_VERSION: "{{ matrix.php }}"
       TEST_SUITE: "{{ matrix.suite }}"
-      STACK_VERSION: 8.14.0-SNAPSHOT
+      STACK_VERSION: 8.18.0-SNAPSHOT
     matrix:
       setup:
         suite:
           - "free"
           - "platinum"
         php:
+          - "8.4-cli"
           - "8.3-cli"
           - "8.2-cli"
           - "8.1-cli"
