--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [7.3, 7.4, 8.0, 8.1, 8.2, 8.3, 8.4]
+        php-version: [7.3, 7.4, 8.0, 8.1, 8.2, 8.3, 8.4, 8.5]
         os: [ubuntu-latest]
         es-version: [7.17-SNAPSHOT]
 
