--- a/.github/workflows/integration_test.yml
+++ b/.github/workflows/integration_test.yml
@@ -42,7 +42,7 @@ jobs:
 
     - name: Run Elasticsearch using start-local
       run: |
-        curl -fsSL https://elastic.co/start-local | sh -s -- -v ${{ matrix.es-version }} -esonly
+        curl -fsSL https://elastic.co/start-local | sh -s -- -v ${{ matrix.es-version }} --esonly
 
     - name: Integration tests
       run: |
