cleanup the overview page add serverless info add subs to docsets

--- a/docs/docset.yml
+++ b/docs/docset.yml
@@ -9,3 +9,5 @@ toc:
   - toc: release-notes
 subs:
   es:   "Elasticsearch"
+  es-serverless:   "Elasticsearch Serverless"
+  serverless-short:   "Serverless"
