--- a/.github/workflows/yaml_test.yml
+++ b/.github/workflows/yaml_test.yml
@@ -13,7 +13,7 @@ jobs:
         os: [ubuntu-latest]
         es-version: [9.3.0-SNAPSHOT]
         test-suite: [stack]
-        branch-client-tests: ["9.2"]
+        branch-client-tests: ["main"]
 
     steps:
     - name: Checkout
@@ -27,7 +27,7 @@ jobs:
         coverage: none
       env:
         COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-   
+
     - name: Get composer cache directory
       id: composercache
       run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
